tests/ui/default_value_for_non_default_field.stderr
error[E0277]: the trait bound `MyParam: Default` is not satisfied
 --> tests/ui/default_value_for_non_default_field.rs:5:10
  |
5 | #[derive(tidy_builder::Builder)]
  |          ^^^^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `MyParam`
  |
  = note: this error originates in the derive macro `tidy_builder::Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `MyParam` with `#[derive(Default)]`
  |
1 | #[derive(Default)]
  |
